# docksurf-py

./: .gitignore  CHANGELOG.md  KEYBINDINGS.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docksurf_py/: actions.py  app.py  app.tcss  config.py  connection.py  constants.py  docker.py  models.py  observability.py  paths.py  renderer.py  search.py  service.py  session.py  themes.py  topology.py  widgets.py
docksurf_py/actions/: __init__.py  clipboard.py  common.py  compose.py  container.py  context.py  deletion.py  images.py  inspect.py  networks.py  prune.py  selection.py  volumes.py
docksurf_py/docker/: __init__.py  __main__.py  client.py  context.py  fetcher.py  format.py  streams.py
docksurf_py/renderer/: __init__.py  common.py  detail_pane_renderer.py  focus_resolver.py  snapshot_manager.py  table_renderer.py
docksurf_py/widgets/: __init__.py  build_progress_screen.py  container_picker_screen.py  detail_pane.py  dialogs.py  help_screen.py  inspect_screen.py  layer_history_screen.py  log_pane.py  prune_screen.py  pull_progress_screen.py  search_bar.py  status_bar.py  system_df_screen.py  tables.py  whale_screen.py
packaging/: docksurf.spec  entrypoint.py
tests/: test_actions.py  test_app.py  test_compose.py  test_config.py  test_docker.py  test_fetcher.py  test_format.py  test_logs.py  test_observability.py  test_session.py
tests_integration/: README.md  test_live_docker.py
