[project]
name = "docksurf"
version = "0.1.0"
description = "Terminal UI for visualising Docker containers, images, volumes and networks"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
    "docker>=7.1.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
docksurf = "docksurf_py.app:main"
docksurf-py = "docksurf_py.app:main"

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
]

[tool.mypy]
python_version = "3.11"
files = ["docksurf_py"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docksurf_py"]
